First pass adding JS
Initial rendition adding JS and running files ensuring everything is linked appropriately,

--- a/Nintendo-Quiz-App.html
+++ b/Nintendo-Quiz-App.html
@@ -13,7 +13,7 @@
         <header role="banner">
             <div class="header-container">
                 <h1>
-                <a href="Game-Savvy-Quiz.html">Game.Savvy()<br>
+                <a href="Nintendo-Quiz-App.html">Game.Savvy()<br>
                 <span id="logo-container">
                 <img class="nintendo-header-img" src="http://paperlief.com/images/nintendo-logo-transparent-wallpaper-2.jpg" alt="Nintendo"/>
                 </span><br>
@@ -30,6 +30,7 @@
             <div class="js-answer-container"></div>
         </main>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <scrpit src="Nintendo-Quiz-Data-Management.js"></scrpit>
         <script src="Nintendo-Quiz.js"></script>
     </body>
 </html>
