--- a/Nintendo-Quiz-App.html
+++ b/Nintendo-Quiz-App.html
@@ -2,35 +2,53 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>GameSavvy: Nintendo Edition</title>
         <meta name="description" content="How well do you know your gaming history">
-        <link href="Nintendo-Quiz-Main.css" rel="stylesheet" type="text/css"/>
+        <link href="style.css" rel="stylesheet" type="text/css"/>
         <link href="https://fonts.googleapis.com/css?family=Lacquer|Orbitron&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header role="banner">
+      <div id="nes-stripe-container">
+          <div id="mini-stripe-container">
+            <span class="end-nes-stripes"></span>
+            <span class="nes-stripe"></span>
+            <span class="nes-stripe"></span>
+            <span class="nes-stripe"></span>
+            <span class="nes-stripe"></span>
+            <span class="nes-stripe"></span>
+            <span class="nes-stripe"></span>
+            <span class="nes-stripe"></span>
+            <span class="nes-stripe"></span>
+            <span class="nes-stripe"></span>
+            <span class="end-nes-stripes"></span>
+          </div>
+      </div>
+        <header role="banner" class="quizActive">
             <div class="header-container">
-                <h1>
-                <a href="Nintendo-Quiz-App.html">Game.Savvy()<br>
-                <span id="logo-container">
-                <img class="nintendo-header-img" src="http://paperlief.com/images/nintendo-logo-transparent-wallpaper-2.jpg" alt="Nintendo"/>
-                </span><br>
-                <p>EDITION</p>
-                </a>
-                </h1>
+                <h1 class="header-text">
+                <a href="index.html">Game.Savvy()</h1><br>
+                <img class="nintendo-header-img" src="https://user-images.githubusercontent.com/51301422/63534767-78913e80-c4ff-11e9-8fbc-e2e5bdcf096f.png" alt="Nintendo"/></a>
+                <br>
+                <p class="header-text">EDITION</p>
             </div>
         </header>
-        <main>
-            <div class="js-start-menu">
-                <h2 class="challenge-placeholder">Take the Challenge!</h2>
-                <button type="button" class="startButton js-start-quiz-button">Ready Player 1</button>
+        <section class="score-keeper hidden">
+            <div class="userStats">
+                <p id="questionDisplay"><b>Level: </b><span class="js-question-number">0</span>/10</p>
+                <p id="scoreDisplay"><b>Score: </b><span class="js-user-score">0</span></p>
             </div>
-            <div class="js-answer-container"></div>
-        </main>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <scrpit src="Nintendo-Quiz-Data-Management.js"></scrpit>
-        <script src="Nintendo-Quiz.js"></script>
+        </section>
+        <main>
+            <div class="startMenu">
+                <h2 class="challenge-head">Take the Challenge!</h2>
+                <button type="button" class="startButton js-start-button">Ready Player 1</button>
+            </div>
+            <div id="question-container"></div>
+          </main>
+        <script src="//code.jquery.com/jquery.min.js"></script>
+        <script src="data-management.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
