--- a/Nintendo-Quiz-App.html
+++ b/Nintendo-Quiz-App.html
@@ -48,7 +48,7 @@
             <div id="question-container"></div>
           </main>
         <script src="//code.jquery.com/jquery.min.js"></script>
-        <script src="data-management.js"></script>
-        <script src="script.js"></script>
+        <script src="Nintendo-Quiz-Data-Management.js"></script>
+        <script src="Nintendo-Quiz-App.js"></script>
     </body>
 </html>
