--- a/Nintendo-Quiz-App.html
+++ b/Nintendo-Quiz-App.html
@@ -49,6 +49,6 @@
           </main>
         <script src="//code.jquery.com/jquery.min.js"></script>
         <script src="Nintendo-Quiz-Data-Management.js"></script>
-        <script src="Nintendo-Quiz-App.js"></script>
+        <script src="Nintendo-Quiz.js"></script>
     </body>
 </html>
