--- a/index.html
+++ b/index.html
@@ -3,52 +3,54 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>GameSavvy: Nintendo Edition</title>
+        <title>Game.Savvy: Nintendo Edition</title>
         <meta name="description" content="How well do you know your gaming history">
-        <link href="Nintendo-Quiz-Main.css" rel="stylesheet" type="text/css"/>
+        <link href="style.css" rel="stylesheet" type="text/css"/>
         <link href="https://fonts.googleapis.com/css?family=Lacquer|Orbitron&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     </head>
     <body>
-      <div id="nes-stripe-container">
-          <div id="mini-stripe-container">
-            <span class="end-nes-stripes"></span>
-            <span class="nes-stripe"></span>
-            <span class="nes-stripe"></span>
-            <span class="nes-stripe"></span>
-            <span class="nes-stripe"></span>
-            <span class="nes-stripe"></span>
-            <span class="nes-stripe"></span>
-            <span class="nes-stripe"></span>
-            <span class="nes-stripe"></span>
-            <span class="nes-stripe"></span>
-            <span class="end-nes-stripes"></span>
+      <div id="nesStripeContainer">
+          <div id="miniStripeContainer">
+            <span class="end_nes_stripes"></span>
+            <span class="nes_stripe"></span>
+            <span class="nes_stripe"></span>
+            <span class="nes_stripe"></span>
+            <span class="nes_stripe"></span>
+            <span class="nes_stripe"></span>
+            <span class="nes_stripe"></span>
+            <span class="nes_stripe"></span>
+            <span class="nes_stripe"></span>
+            <span class="nes_stripe"></span>
+            <span class="end_nes_stripes"></span>
           </div>
       </div>
-        <header role="banner" class="quizActive">
-            <div class="header-container">
-                <h1 class="header-text">
-                <a href="index.html">Game.Savvy()</h1><br>
-                <img class="nintendo-header-img" src="https://user-images.githubusercontent.com/51301422/63534767-78913e80-c4ff-11e9-8fbc-e2e5bdcf096f.png" alt="Nintendo"/></a>
+        <header role="banner">
+            <div class="header_container">
+                <h1 class="header_text">
+                <a href="index.html">Game.Savvy</h1><br>
+                <img class="nintendo_header_img" src="https://user-images.githubusercontent.com/51301422/63534767-78913e80-c4ff-11e9-8fbc-e2e5bdcf096f.png" alt="Nintendo"/></a>
                 <br>
-                <p class="header-text">EDITION</p>
+                <p class="header_text">EDITION</p>
             </div>
         </header>
-        <section class="score-keeper hidden">
-            <div class="userStats">
-                <p id="questionDisplay"><b>Level: </b><span class="js-question-number">0</span>/10</p>
-                <p id="scoreDisplay"><b>Score: </b><span class="js-user-score">0</span></p>
+        <section class="score_keeper hidden">
+            <div class="user_stats">
+                <p id="questionDisplay"><b>Question: </b><span class="js_question_number">0</span>/10</p>
+                <p id="correctDisplay"><b>Correct: </b><span class="js_questions_correct">0</span>
+                </p>
+                <p id="scoreDisplay"><b>Score: </b><span class="js_user_score">0</span></p>
             </div>
         </section>
         <main>
-            <div class="startMenu">
-                <h2 class="challenge-head">Take the Challenge!</h2>
-                <button type="button" class="startButton js-start-button">Ready Player 1</button>
+            <div class="start_menu">
+                <h2 class="challenge_header">Take the Challenge!</h2>
+                <button type="button" class="start_button">Ready Player 1</button>
             </div>
-            <div id="question-container"></div>
+            <div id="jsQuestionContainer"></div>
           </main>
         <script src="//code.jquery.com/jquery.min.js"></script>
-        <script src="Nintendo-Quiz-Data-Management.js"></script>
-        <script src="Nintendo-Quiz.js"></script>
+        <script src="data-management.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
