--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Game.Savvy: Nintendo Edition</title>
         <meta name="description" content="How well do you know your gaming history">
-        <link href="style.css" rel="stylesheet" type="text/css"/>
+        <link href="Nintendo-Quiz-Main.css" rel="stylesheet" type="text/css"/>
         <link href="https://fonts.googleapis.com/css?family=Lacquer|Orbitron&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     </head>
@@ -50,7 +50,7 @@
             <div id="jsQuestionContainer"></div>
           </main>
         <script src="//code.jquery.com/jquery.min.js"></script>
-        <script src="data-management.js"></script>
-        <script src="script.js"></script>
+        <script src="Nintendo-Quiz-Data-Management.js"></script>
+        <script src="Nintendo-Quiz.js"></script>
     </body>
 </html>
